Dashboard title bar alignment and height fix

--- a/src/com/bt/dm/fx/controls/dashboard/Dashboard.css
+++ b/src/com/bt/dm/fx/controls/dashboard/Dashboard.css
@@ -29,3 +29,6 @@
 .dm-card {
     -fx-padding: 15;
 }
+.small-font-menu {
+	-fx-font-size: 20px !important;
+}
